--- a/Páginas API/index.html
+++ b/Páginas API/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -65,5 +66,4 @@
         <ul><li><a href="avaliações.html">Aprender</a></li></ul>
     </section>
     <footer></footer>
- </body>
-   
+</body>
