--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
     <link rel="stylesheet" href="intro.css">
+    <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
