--- a/Páginas API/avaliações.html
+++ b/Páginas API/avaliações.html
@@ -251,7 +251,7 @@
     </main>
     <script src="script.js"></script>
     <footer>
-      <a href="index.html" class="home">
+      <a href="home.html" class="home">
         <img src="home.png" alt="Home"></img>
     </a>
     </footer>
