--- a/Páginas API/home.html
+++ b/Páginas API/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
 <body>
