--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
-        <p>PRODUCT OWNER</p>
+        <h1>PRODUCT OWNER</h1>
 </header>
 <footer>
     <section>
