--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
+
 <body>
+
     <header>
-        <p>SOFT SKILLS</p>
-</header>
+        <h1>SOFT SKILLS</h1>
+    </header>
+
+</body>
+
 <footer>
     <section>
         <div class="anterior" 
