--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
+
 <body>
     <header>
-        <p>SCRUM MASTER</p>
-</header>
+        <h1>SCRUM MASTER</h1>
+    </header>
+
+</body>
+
 <footer>
     <section>
         <div class="anterior" 
