--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -57,8 +57,10 @@
       </div>
     </section>
         <div class="próximo"
-          <ul><li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
+          <a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
     </div>
-    
+        <div class="avaliação">
+            <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
+    </div>
 
         
