--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -13,12 +13,12 @@
 </header>
 <main>
     <section>
-        <h2>O que é Product Owner(PO)?</h2>
+        <h2>O QUE É PRODUCT OWNER?</h2>
         <p>O Product Owner, geralmente abreviado como P.O, é a pessoa responsável por garantir a comunicação entre a equipe de desenvolvimento e os clientes do projeto. Ele define a visão do produto, prioriza as funcionalidades e mantém a equipe focada nas necessidades identificadas e na direção solicitada pela organização. É importante que haja apenas um Product Owner dentro da equipe, pois evita conflitos de prioridade e garante uma visão clara e consistente do produto.</p>
     </section>
 
     <section>
-        <h2>Funções do P.O</h2>
+        <h2>FUNÇÕES</h2>
             <ol>
                 <li>Gerenciar os clientes, balanceando suas necessidades em relação ao produto, comunicando-se com eles para identificar essas demandas e influenciando-as, assim mantendo a colaboração com o projeto maximizada.</li>
                 <li>Gerenciar o Product Backlog, definindo as funcionalidades do produto, deixando ele o mais entendível para o time, e organizando as prioridades conforme necessárias em cada sprint.</li>
