--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -15,15 +15,15 @@
     </header>
     <main>
         <section>
-            <h2>O que são?</h2>
+            <h2>O QUE SÃO?</h2>
             <p>Soft skill é o termo utilizado para se referir as habilidades e competências comportamentais de um indivíduo, como este se porta em meio a outros e até mesmo como ele trabalha/lida com suas próprias emoções. São exemplos de soft skills: empatia, liderança, curiosidade, integridade, criatividade, responsabilidade, sociabilidade, trabalho em equipe, entre muitas outras</p>
         </section>
         <section>
-            <h2>Diferença entre Soft Skills e Hard Skills</h2>
+            <h2>DIFERENÇA ENTRE SOFT SKILLS E HARD SKILLS</h2>
             <p>Hard Skills são as habilidades técnicas que um indivíduo adquire em sua trajetória profissional através de graduações, cursos, treinamentos etc. Tudo que o profissional possa mostrar em seu currículo como habilidades adquiridas. Enquanto Soft Skills, como já citado, são as habilidades comportamentais de um indivíduo que no caso não necessitam de um certificado, mas sim de um desenvolvimento intrapessoal e, principalmente, interpessoal.</p>
         </section>
         <section>
-            <h2>Como desenvolver Soft Skills</h2>
+            <h2>COMO DESENVOLVER SOFT SKILLS?</h2>
             <p>Há Soft Skills que já fazem parte da personalidade da pessoa, no entanto o desenvolvimento destas precisa ser aprimorado de maneira contínua e ainda há outras que precisam ser desenvolvidas e é através do autoconhecimento que o indivíduo consegue evoluir as Soft Skills. </p>
             <p>Primeiramente é importante analisar quais as habilidades precisam ser desenvolvidas através de uma autoanalise que pode ser feita utilizando várias ferramentas, como por exemplo o MBTI onde a pessoa consegue entender sobre seu tipo de personalidade. </p>
             <p>Feito isso, há algumas práticas que podem colaborar nessa busca pelo desenvolvimento pessoal, tais como participar de projetos em equipe para poder aplicar as habilidades interpessoais, buscar um feedback regular nas áreas de possíveis melhorias, leitura de livros sobre inteligência emocional, se colocar no lugar do outro e tentar entender o outro lado, entre muitas outras maneiras. O importante é saber que algo precisa ser melhorado e buscar o progresso nessa área. </p>
