--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -69,18 +69,19 @@
             do produto, incluindo melhorias e ajustes para que seu lançamento seja um sucesso.
         </p>
     </section>
-
-</body>
-
-<footer>
-    <section>
+    <footer>
         <div class="anterior" 
-          <ul><li><a class="fonteb" href="scrum.html">ANTERIOR</a></li></ul>
-        </div>
-    </section>
+              <ul><li><a class="fonteb" href="scrum.html">ANTERIOR</a></li></ul>
+         </div>
+        <div class="avaliação">
+            <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
+         </div>
+         <a href="home.html" class="home">
+            <img src="home.png" alt="Home"></img>
+        </a>
+    
         <div class="próximo"
-          <ul><li><a class="fontep" href="master.html">PRÓXIMO</a></li></ul>
-        </div>
-</footer>
-        </div>
-</footer>
+            <ul><li><a class="fontep" href="master.html">PRÓXIMO</a></li></ul>
+         </div>
+    </footer>
+</body>
