--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -60,8 +60,7 @@
 
     <footer>
         <div class="próximo"
-          <ul><li><a href="scrum.html">PRÓXIMO</a></li></ul>
-        <div class="home">
-        </div>
+            <ul><li><a class="fontep" href="scrum.html">PRÓXIMO</a></li></ul>
+         </div>
 </footer>
    
