--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -25,16 +25,19 @@
             </p>
         </section>
     </main>
-
+    <footer>
+        <div class="anterior" 
+              <ul><li><a class="fonteb" href="artefatos.html">ANTERIOR</a></li></ul>
+         </div>
+        <div class="avaliação">
+            <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
+         </div>
+         <a href="home.html" class="home">
+            <img src="home.png" alt="Home"></img>
+        </a>
+       <div class="próximo"
+            <ul><li><a class="fontep" href="po.html">PRÓXIMO</a></li></ul>
+         </div>
+    </footer>
 </body>
 
-<footer>
-    <section>
-        <div class="anterior" 
-          <ul><li><a class="fonteb" href="artefatos.html">ANTERIOR</a></li></ul>
-      </div>
-    </section>
-        <div class="próximo"
-          <ul><li><a class="fontep" href="po.html">PRÓXIMO</a></li></ul>
-    </div>
-</footer>
