--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -28,12 +28,18 @@
     </section>
 </main>
 <footer>
-    <section>
-        <div class="anterior" 
-            <ul><li><a class="fonteb" href="master.html">ANTERIOR</a></li></ul>
-        </div>
-    </section>
-        <div class="próximo"
-            <ul><li><a class="fontep" href="softskills.html">PRÓXIMO</a></li></ul>
-        </div>
+    <div class="anterior" 
+          <ul><li><a class="fonteb" href="master.html">ANTERIOR</a></li></ul>
+     </div>
+    <div class="avaliação">
+        <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
+     </div>
+     <a href="home.html" class="home">
+        <img src="home.png" alt="Home"></img>
+    </a>
+
+    <div class="próximo"
+        <ul><li><a class="fontep" href="softskills.html">PRÓXIMO</a></li></ul>
+     </div>
 </footer>
+</body>
