--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -47,20 +47,20 @@
                 avaliar o desempenho do time. </li>
         </ol>
     </section>
-
-</body>
-
-<footer>
-    <section>
-        <div class="anterior" 
+   <footer>
+    <div class="anterior" 
           <ul><li><a class="fonteb" href="intro.html">ANTERIOR</a></li></ul>
-      </div>
-    </section>
-        <div class="próximo"
-          <a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
-    </div>
-        <div class="avaliação">
-            <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
-    </div>
+     </div>
+    <div class="avaliação">
+        <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
+     </div>
+     <a href="home.html" class="home">
+        <img src="home.png" alt="Home"></img>
+    </a>
+    <div class="próximo"
+        <ul><li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
+     </div>
+</footer>
+</body>
 
         
