--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -29,16 +29,16 @@
             <p>Feito isso, há algumas práticas que podem colaborar nessa busca pelo desenvolvimento pessoal, tais como participar de projetos em equipe para poder aplicar as habilidades interpessoais, buscar um feedback regular nas áreas de possíveis melhorias, leitura de livros sobre inteligência emocional, se colocar no lugar do outro e tentar entender o outro lado, entre muitas outras maneiras. O importante é saber que algo precisa ser melhorado e buscar o progresso nessa área. </p>
         </section>
     </main>
-
-</body>
-
-<footer>
-    <section>
+    <footer>
         <div class="anterior" 
-          <ul><li><a class="fonteb" href="po.html">ANTERIOR</a></li></ul>
-      </div>
-    </section>
-        <div class="próximo"
-          <ul><li><a class="fontep" href="avaliações.html">PRÓXIMO</a></li></ul>
-    </div>
-</footer>
+            <ul><li><a class="fonteb" href="po.html">ANTERIOR</a></li></ul>
+         </div>
+         <div class="soft">
+           <a href="home.html" class="home">
+             <img src="home.png" alt="Home"></img>
+         </a>
+            <div class="avaliação">
+              <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
+            </div>
+        </div>
+</body>
