--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -30,15 +30,15 @@
         </section>
     </main>
     <footer>
-        <div class="anterior" 
-            <ul><li><a class="fonteb" href="po.html">ANTERIOR</a></li></ul>
-         </div>
+        <div class="anterior">
+          <a href="po.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
+        </div>
          <div class="soft">
            <a href="home.html" class="home">
              <img src="home.png" alt="Home"></img>
          </a>
             <div class="avaliação">
-              <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
+                <a href="avaliações.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">REALIZAR AVALIAÇÃO</a>
             </div>
         </div>
 </body>
