--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -48,18 +48,16 @@
         </ol>
     </section>
    <footer>
-    <div class="anterior" 
-          <ul><li><a class="fonteb" href="intro.html">ANTERIOR</a></li></ul>
-     </div>
-    <div class="avaliação">
-        <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
-     </div>
-     <a href="home.html" class="home">
-        <img src="home.png" alt="Home"></img>
-    </a>
-    <div class="próximo"
-        <ul><li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
-     </div>
+    <div class="anterior">
+        <a href="intro.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
+      </div>
+    <div class="soft">
+        <a href="home.html" class="home">
+          <img src="home.png" alt="Home"></img></a>
+          <div class="próximo"
+            <ul><li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
+       </div>
+</div>
 </footer>
 </body>
 
