--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -70,18 +70,16 @@
         </p>
     </section>
     <footer>
-        <div class="anterior" 
-              <ul><li><a class="fonteb" href="scrum.html">ANTERIOR</a></li></ul>
-         </div>
-        <div class="avaliação">
-            <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
-         </div>
-         <a href="home.html" class="home">
-            <img src="home.png" alt="Home"></img>
-        </a>
-    
+        <div class="anterior">
+            <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
+          </div>
+        <div class="soft">
+            <a href="home.html" class="home">
+              <img src="home.png" alt="Home"></img></a>
         <div class="próximo"
             <ul><li><a class="fontep" href="master.html">PRÓXIMO</a></li></ul>
-         </div>
+           </div>
+    </div>
+    </footer>
     </footer>
 </body>
