--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -26,18 +26,16 @@
         </section>
     </main>
     <footer>
-        <div class="anterior" 
-              <ul><li><a class="fonteb" href="artefatos.html">ANTERIOR</a></li></ul>
-         </div>
-        <div class="avaliação">
-            <a class="fontea" href="avaliações.html">REALIZAR AVALIAÇÃO</a>
-         </div>
-         <a href="home.html" class="home">
-            <img src="home.png" alt="Home"></img>
-        </a>
-       <div class="próximo"
-            <ul><li><a class="fontep" href="po.html">PRÓXIMO</a></li></ul>
-         </div>
-    </footer>
+            <div class="anterior">
+                <a href="artefatos.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
+              </div>
+            <div class="soft">
+                <a href="home.html" class="home">
+                  <img src="home.png" alt="Home"></img></a>
+                  <div class="próximo"
+                  <ul><li><a class="fontep" href="po.html">PRÓXIMO</a></li></ul>
+            </div>
+        </div>
+        </footer>
 </body>
 
