--- a/Páginas API/avaliações.html
+++ b/Páginas API/avaliações.html
@@ -14,9 +14,9 @@
     </header>
     <main>
         <section>
-          <p style="color: white; font-weight: 400; text-align: justify; margin:37px;font-size: 2.0vw;">Nesta seção, você encontrará perguntas referentes a todo o conteúdo 
+          <h5>Nesta seção, você encontrará perguntas referentes a todo o conteúdo 
             ministrado nas paginas anteriores, como uma forma de avaliar sua compreensão e aprendizado.
-          </p>
+          </h5>
 
 
           <p>SCRUM MASTER</p>
@@ -149,7 +149,7 @@
              <div class="item">
               <div class="imagem"><img src="angle-circle-right.png"></img></div>
               <div class="respostas">
-                <button class="btn" onclick="checkAnswer(this, true)">Para evitar conflitos de prioridade e divergências na definição do produto</button></div>
+                <button class="btn1" onclick="checkAnswer(this, true)">Para evitar conflitos de prioridade e divergências na definição do produto</button></div>
             </div>
              <div class="item">
               <div class="imagem"><img src="angle-circle-right.png"></img></div>
@@ -324,7 +324,7 @@
             <p>SCRUM</p>
             <div class="detail">
                 <div class="quadrado"></div>
-                <div class="pergunta"><p style="margin-left: 7px; text-align: justify;">De acordo com os textos anteriores, qual o significado da sigla OOPSLA?</p></div>
+                <div class="pergunta"><p>De acordo com os textos anteriores, qual o significado da sigla OOPSLA?</p></div>
               </div>
               <div class="item">
                 <div class="imagem"><img src="angle-circle-right.png"></img></div>
