--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -12,18 +12,17 @@
     <header>
         <h1>INTRODUÇÃO</h1>
     </header>
-
     <section>
 
         <h2>O QUE É A METODOLOGIA ÁGIL?</h2>
-
-        <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
-            mais flexível e adaptado. Como o próprio nome sugere,<br> seu principal objetivo é
-            aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto. Assim, a 
-            elaboração do projeto é feita em<br> ciclos curtos chamados de iterações, que possibilitam um feeback
-            contínuo e uma melhoria na qualidade e conformidade das entregas. Nas próximas páginas<br> você entenderá
-            mais detalhadamente sobre cada um desses conceitos.
-        </p>
+        <div class="alinhar">
+            <img src="imgintro.png"></img>
+           <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
+            mais flexível e adaptado. Como o próprio nome sugere, seu principal objetivo é
+            aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto.</p>
+        </div> 
+           <p>Assim, a elaboração do projeto é feita em ciclos curtos chamados de iterações, que possibilitam um feeback
+            contínuo e uma melhoria na qualidade e conformidade das entregas.<br>Nas próximas páginas você entenderá mais detalhadamente sobre cada um desses conceitos</p>
     </section>
 
     <section>
@@ -46,10 +45,11 @@
             <li>Soft skills: Habilidades necessárias para um profissional de T.I. no mercado de trabalho.</li>
         </ol>
 
-        <p> Ao final de cada aula, disponibilizamos um teste de compreensão, no qual você poderá avaliar o seu nível
+        
+          <p> Ao final de cada aula, disponibilizamos um teste de compreensão, no qual você poderá avaliar o seu nível
             de entendimento sobre a metodologia ágil e quais os pontos de<br>
             melhoria. 
-        </p>
+           </p>
 
     </section>
 
@@ -59,8 +59,13 @@
     </section>
 
     <footer>
-        <div class="próximo"
-            <ul><li><a class="fontep" href="scrum.html">PRÓXIMO</a></li></ul>
+        <div class="soft">
+            <a href="home.html" class="home">
+              <img src="home.png" style="margin-top: -10%;" alt="Home"></img>
+          </a>
+        </div>
+        <div class="próximo">
+            <a class="fontep" href="scrum.html">PRÓXIMO</a>
          </div>
 </footer>
    
