--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -23,7 +23,7 @@
     <section>
         <p>
             <h2>BACKLOG DO PRODUTO</h2>
-            <img src="backlog.jpg" alt="Backlog" style="float:left;width: 400px;height: 400px; margin-right: 20px;">
+            <img src="backlog.jpg" alt="Backlog" style="float:right;width: 300px;height: 300px; margin-left: 50px; margin-right: 50px; border-radius: 2cap;">
         <p>Backlog é um documento que contém uma lista de todos os requisitos do produto, ou seja, tudo aquilo que 
             deve ser desenvolvido pela equipe. Essa lista é dividida por ordem de prioridade, considerando as 
             considerações do cliente.<br><br>
@@ -42,7 +42,7 @@
     <section>
         <p>
             <h2>BURNDOWN</h2>
-            <img src="burndown.png" alt="burndown" style="float: left;width: auto;height: auto; margin-right: 20px;">
+            <img src="burndown.png" alt="burndown" style="float: left;width: 400px;height: 200px; margin: 20px; border-radius: 2cap;">
         <p>O Burndown é um gráfico montado pelo Scrum Master que representa a relação entre a estimativa para o 
             período de conclusão das atividades, para assim calcular de forma eficiente se a equipe terá tempo hábil 
             para concluir o trabalho. Para criar um gráfico de Burndown é preciso estimar o esforço necessário para 
@@ -63,7 +63,7 @@
     <section>
         <p>
             <h2>USER STORY</h2>
-            <img src="p.jpg" alt="User Story" style="float: left;width: 400px;height: 400px; margin-right: 20px;">
+            <img src="p.jpg" alt="User Story" style="float: right;width: 300px;height: 300px; margin-left: 50px; margin-right: 50px; border-radius: 2cap;">
             <p>User Story é uma descrição concisa de uma necessidade do usuário do produto ,um “requisito”, sob o ponto de vista do usuário. 
                 A User Story busca descrever essa necessidade de uma forma simples e leve, representando apenas um item do Backlog, seu uso é opcional.
             </p>
@@ -83,20 +83,14 @@
 
     <section>
         <h2>DOR E DOD</h2>
-        <img src="dor.jpg" alt="DOR" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
+        <img src="dor.jpg" alt="DOR" style="float: left; width: 300px; height: 300px; margin-right: 20px; margin-top: 30px; border-radius: 2cap;">
+        <img src="dod.jpg" alt="DOD" style="float: right; width: 300px; height: 300px; margin: 20px; margin-top: 20px; border-radius: 2cap;">
         <p>
-            <br>
-            <br>
             <br>
             DoR e DoD trazem transparência ao processo de desenvolvimento. Com o uso correto destas ferramentas, equipes podem trabalhar 
             com maior eficiência e estarem 100% focados na entrega de valor para seu projeto. 
             As duas ferramentas devem ser vistas como critérios de entrada e saída, com o DoR servindo como uma 
             pré-condição para verificar se um item está pronto para ser levado para teste e o DoD se um item está pronto para ser movido para a próxima etapa.
-        <img src="dod.jpg" alt="DOD" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
-        <br>
-        <br>
-        <br>
-        <br>
         <br>
         <br>
         <br>
@@ -106,7 +100,7 @@
 
     <section>
         <h2>MVP</h2>
-        <img src="mvp.jpg" alt="MVP" style="float: left; width: 400px; height: 400px; margin-right: 20px;">
+        <img src="mvp.jpg" alt="MVP" style="float: left; width: 300px; height: 300px; margin-right: 20px; border-radius: 2cap;">
         <p>MVP é a sigla que representa o Mínimo Produto Viável, permitindo que a versão mais simples de um produto seja visualizada, 
             apresentando  suas funcionalidades mais básicas, é funcional para validar a ideia, aplicabilidade e aderência de um produto no mercado. 
             Tem grande  importância para analisar a aceitação do produto pelo cliente. Além de ajudar a definir uma direção para o desenvolvimento 
