--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -33,7 +33,7 @@
           </div>
         <div class="soft">
             <a href="home.html" class="home">
-              <img src="home.png" alt="Home"></img></a>
+              <img src="imagens/home.png" alt="Home"></img></a>
         <div class="próximo"
             <ul><li><a class="fontep" href="softskills.html">PRÓXIMO</a></li></ul>
         </div>
