--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -16,7 +16,7 @@
 
         <h2>O QUE É A METODOLOGIA ÁGIL?</h2>
         <div class="alinhar">
-            <img src="imgintro.png"></img>
+            <img src="imagens/imgintro.png">
            <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
             mais flexível e adaptado. Como o próprio nome sugere, seu principal objetivo é
             aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto.</p>
@@ -29,6 +29,7 @@
 
         <h2>O QUE VOCÊ ENCONTRARÁ NESSE SITE?</h2>
 
+        <div class="alinhar2">
         <p>Bem-vindo ao nosso site! O spaceline foi desenvolvido com o objetivo de ensinar a metodologia
            ágil de forma didática, proporcionando a todos os interessados um<br>
            conhecimento abrangente sobre o método scrum e sua aplicação prática no ambiente de trabalho.<br> 
@@ -36,7 +37,11 @@
            simular processos, montar ferramentas e identificar suas soft skills.
            O conteúdo é dividido em 5 partes:
         </p>
-        
+
+        <img src="imagens/livroaberto.png">
+        </div>
+
+        <div class="introduçao">
         <ol>
             <li>Método Scrum: Uma explicação detalhada sobre a metodologia e todos os processos envolvidos.</li>
             <li>Ferramentas: Conjunto de artefatos necessários para o gerenciamento e documentação do projeto.</li>
@@ -50,6 +55,7 @@
             de entendimento sobre a metodologia ágil e quais os pontos de<br>
             melhoria. 
            </p>
+        </div>
 
     </section>
 
@@ -61,7 +67,7 @@
     <footer>
         <div class="soft">
             <a href="home.html" class="home">
-              <img src="home.png" style="margin-top: -10%;" alt="Home"></img>
+              <img src="imagens/home.png" style="margin-top: -10%;" alt="Home"></img>
           </a>
         </div>
         <div class="próximo">
