--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -31,7 +31,7 @@
               </div>
             <div class="soft">
                 <a href="home.html" class="home">
-                  <img src="home.png" alt="Home"></img></a>
+                  <img src="imagens/home.png" alt="Home"></img></a>
                   <div class="próximo"
                   <ul><li><a class="fontep" href="po.html">PRÓXIMO</a></li></ul>
             </div>
