--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -16,19 +16,53 @@
 
     <section>
         <h2>O QUE É A METODOLOGIA ÁGIL?</h2>
-        <p>O scrum é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software, 
-            mas também em outras áreas onde a adaptabilidade é necessária. Ele ajuda as equipes a colaborar usando ciclos 
-            curtos de desenvolvimento chamados sprints, permitindo-os melhorar o produto com base em um feedback contínuo
+        <p>A metodologia ágil, também conhecida como metodo scrum, é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software, 
+            mas também em outras áreas onde a adaptabilidade é necessária. Ele abrange um conjunto de ferramentas,
+            reuiões e funções que garantem um desenvolvimento eficiente para o projeto. Além disso, o scrum
+            também usa ciclos curtos de desenvolvimento chamados sprints, permitindo-os melhorar o produto com base 
+            em um feedback contínuo.<br><br>
+            Alguns princípios do scrum fundamentais para que o projeto possa ter sucesso são:
+            <ol>
+                <li>Transparência: É importante que todos os membros da equipe tenham consciência dos desafios
+                    que cada um pode estar enfrentando, evitando falhas na comunicação e troca de informações.
+                </li>
+                <li>Reflexão: O método permite que os membros da equipe analisem seu próprio progresso e
+                    reflitam sobre os possíveis pontos de melhoria, para que o planejamento futuro possa ser
+                    feito com base nessa análise.
+                </li>
+                <li>Adaptação: As prioridades e a ordem de conclusão das tarefas podem ser alteradas a todo
+                    momento conforme a necessidade do cliente.
+                </li>
+            </ol>
+            <p>O scrum também possui alguns valores, sendo eles:</p>
+            <ol>
+                <li>Compromisso: Os membros da equipe devem estar comprometidos em concluir as tarefas com
+                    êxito e buscar encontrar a melhor solução.
+                </li>
+                <li>Coragem: As discussões da equipe devem ser honestas e transparentes para encontrar a melhor
+                    solução.
+                </li>
+                <li>Abertura: Os integrantes da equipe devem estar dispostos a aceitar novas ideias e oportunidades que
+                    possam corroborar o projeto.
+                </li>
+                <li>Foco: Cada membro deverá ter foco em cumprir a tarefa selecionada do product backlog, otimizando
+                    o tempo para que a entrega de resultado ocorra no prazo determinado.
+                </li>
+                <li>Respeito: Os integrantes da equipe devem manter um ambiente de respeito e colaboração, garantindo um bom
+                    trabalho em equipe.
+                </li>
+            </ol>
         </p>
     </section>
 
     <section>
-        <h2>HISTÓRIA</h2>
-        <p>O scrum foi desenvolvido por Jeff Sutherland e Ken Schwaber no início da década de 1990, influenciado por 
-            técnicas de manufatura enxuta e gerenciamento de processos. O termo "scrum" vem de uma metáfora do rugby 
-            em que a equipe se move como um todo e se adapta facilmente às mudanças conforme a partida avança. Em 1995,
-            os desenvolvedores anunciaram oficialmente este método na conferência OOPSLA (Programação Orientada a 
-            Objetos, Sistemas, Linguagens e Aplicações).
+        <h2>QUAIS OS BENEFÍCIOS DE USAR O SCRUM?</h2>
+        <p>O scrum se destaca em relação a outras metodologias pela praticidade e eficiência, uma vez que permite que as 
+            equipes executem mudanças no projeto com mais rapidez. Os processos que envolvem a verificação do produto 
+            permitem obter um retorno com base na visão do cliente, garantindo a qualidade mesmo em meio a imprevistos. 
+            Além disso, como as equipes são autogerenciáveis, os membros tem uma maior flexibilidade para realizar mudanças
+            no produto conforme seu próprio estilo de trabalho.
+
         </p>
     </section>
 
@@ -36,8 +70,8 @@
         <h2>PROCESSOS</h2>
         <p>Como mencionado anteriormente, o scrum possui ciclos curtos de desenvolvimento denominados
             sprints, que podem durar aproximadamente entre 1 a 4 semanas, onde a equipe de desenvolvimento
-            cria versões do produto que são continuamente modificadas e complementadas até o produto
-            estar pronto. Os processos onde a elaboração do produto é discutida são:
+            cria versões do produto que são continuamente modificadas e complementadas até a sua
+            conclusão. Os processos que discutem a elaboração do produto são:
         </p>
 
         <ol>
@@ -53,7 +87,7 @@
     </div>
     <div class="soft">
         <a href="home.html" class="home">
-            <img src="home.png" alt="Home"></img></a>
+            <img src="imagens/home.png" alt="Home"></img></a>
             <div class="próximo"
             <ul><li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
     </div>
