--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -35,7 +35,7 @@
         </div>
          <div class="soft">
            <a href="home.html" class="home">
-             <img src="home.png" alt="Home"></img>
+             <img src="imagens/home.png" alt="Home"></img>
          </a>
             <div class="avaliação">
                 <a href="avaliações.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">REALIZAR AVALIAÇÃO</a>
