--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -16,101 +16,91 @@
 
     <section>
         <h2>O QUE SÃO?</h2>
-        <p>Os artefatos são os documentos e ferramentas de gerenciamento e documentação do produto, que 
-        são necessários para nortear a equipe ao longo do desenvolvimento.</p>
+        <p>Os artefatos são ferramentas de gerenciamento utilizadas no scrum que além de auxiliarem no
+            planejamento também fornecem informações importantes para a equipe e os demais interessados no projeto.
+            A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.
+        </p>
     </section>
 
     <section>
-        <p>
             <h2>BACKLOG DO PRODUTO</h2>
-            <img src="backlog.jpg" alt="Backlog" style="float:left;width: 400px;height: 400px; margin-right: 20px;">
-        <p>Backlog é um documento que contém uma lista de todos os requisitos do produto, ou seja, tudo aquilo que 
-            deve ser desenvolvido pela equipe. Essa lista é dividida por ordem de prioridade, considerando as 
-            considerações do cliente.<br><br>
-            Esse documento está em constante alteração, pois é necessário ordenar de acordo com as decisões do cliente 
-            do projeto. Pode conter também melhorias, correção de problemas e pesquisas que foram essencias para o 
-            desenvolvimento.
+            <img src="imagens/backlog.jpg" alt="Backlog" style="float:left;width: 400px;height: 400px; margin-right: 20px;">
+        <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que 
+            deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
+            de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista, satisfazendo
+            as necessidades do cliente.
         </p>
+        <h2>Como montar o Backlog?</h2>
+        <p> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os requisitos. Após entender a
+            visão do produto, as Epics, funcionalidades de maior nível, devem ser identificadas e priorizadas em relação
+            as demais tarefas. Depois, essas Epics devem ser divididas em User Story (você entenderá melhor esse conceito
+            mais abaixo) e as tarefas devem ser divididas por de prioridade. Por fim, é essencial fazer uma estimativa
+            para cada item do backlog, conforme o nível de dificuldade. 
         </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        
     </section>
 
     <section>
-        <p>
             <h2>BURNDOWN</h2>
-            <img src="burndown.png" alt="burndown" style="float: left;width: auto;height: auto; margin-right: 20px;">
-        <p>O Burndown é um gráfico montado pelo Scrum Master que representa a relação entre a estimativa para o 
-            período de conclusão das atividades, para assim calcular de forma eficiente se a equipe terá tempo hábil 
-            para concluir o trabalho. Para criar um gráfico de Burndown é preciso estimar o esforço necessário para 
-            concluir um determinado sprint, podendo fazer isso limitando um período de tempo.<br><br>
-            Com as estimativas em mãos devemos acompanhar o progresso diário, isso pode ser feito em um gráfico simples 
-            ou em uma ferramenta de cronograma para visualizar o tempo de execução de cada tarefa e como o trabalho está avançando.
-            Após calcular as estimativas, é importante acompanhar o esforço real, possivelmente a sua linha de trabalho real não será uma reta perfeita 
-            quando traçada no gráfico . É normal ver altos e baixos de esforço, pois  maioria dos projetos enfrentam desvios pelo caminho.
-            Para criar um gráfico de burndown deve obter o conjunto final de dados que vêm das estimativas iniciais de esforço e dos regitros de esforço real. 
+            <img src="imagens/burndown.png" alt="burndown" style="float: left;width: auto;height: auto; margin-right: 20px;">
+        <p>O Burndown é um gráfico que representa a relação entre a estimativa para o 
+            período de conclusão das atividades e o período real de conclusão. Esse artefato permite que o
+            grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em relação
+            ao tempo de finalização.
+
+            <h2>Como criar um Burndown?</h2>
+            <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para 
+            concluir cada tarefa da sprint, determinando um limite de tempo. É natural que a diferença entre a linha
+            que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao longo
+            do desenvolvimento que atrasem a conclusão das atribuições. Da mesma forma, o grupo também pode estar muito adiantado
+            na entrega dos resultados, pois o foco está em analisar e acompanhar o progresso, e não em seguir estritamente a
+            estimativa.
         </p>
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
     </section>
 
     <section>
-        <p>
             <h2>USER STORY</h2>
-            <img src="p.jpg" alt="User Story" style="float: left;width: 400px;height: 400px; margin-right: 20px;">
-            <p>User Story é uma descrição concisa de uma necessidade do usuário do produto ,um “requisito”, sob o ponto de vista do usuário. 
-                A User Story busca descrever essa necessidade de uma forma simples e leve, representando apenas um item do Backlog, seu uso é opcional.
+            <img src="imagens/p.jpg" alt="User Story" style="float: left;width: 400px;height: 400px; margin-right: 20px;">
+            <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio ponto de
+               vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para [benefício].
             </p>
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+
+            <h3>QUEM?</h3>
+            <h3 id="h3branco">POR QUE?</h3>
+            <h3>O QUE?</h3>
+
+            <h2>Como fazer uma User Story?</h2>
+            <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
+                Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é necessário
+                para que a tarefa seja concluída.
+            </p>
     </section>
 
     <section>
         <h2>DOR E DOD</h2>
-        <img src="dor.jpg" alt="DOR" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
-        <p>
-            <br>
-            DoR e DoD trazem transparência ao processo de desenvolvimento. Com o uso correto destas ferramentas, equipes podem trabalhar 
-            com maior eficiência e estarem 100% focados na entrega de valor para seu projeto. 
-            As duas ferramentas devem ser vistas como critérios de entrada e saída, com o DoR servindo como uma 
-            pré-condição para verificar se um item está pronto para ser levado para teste e o DoD se um item está pronto para ser movido para a próxima etapa.
-        <img src="dod.jpg" alt="DOD" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <img src="imagens/dor.jpg" alt="DOR" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
+        <h2>Como montar o </h2>
+        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa ter para que possa ser executada
+            pelo time. Enquanto DOD, Definition of Done, é a definição daquilo que foi feito. Ambas as ferramentas são importantes para
+            trazer tranparência ao processo de desenvolvimento, sendo critérios de entrada e saída, o DOR verificando se o item está pronto
+            para ser levado para teste e o DOD se um item está pronto para ser movido para a próxima etapa.
+        </p>
+        <img src="imagens/dod.jpg" alt="DOD" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
     </section>
 
     <section>
         <h2>MVP</h2>
-        <img src="mvp.jpg" alt="MVP" style="float: left; width: 400px; height: 400px; margin-right: 20px;">
-        <p>MVP é a sigla que representa o Mínimo Produto Viável, permitindo que a versão mais simples de um produto seja visualizada, 
-            apresentando  suas funcionalidades mais básicas, é funcional para validar a ideia, aplicabilidade e aderência de um produto no mercado. 
-            Tem grande  importância para analisar a aceitação do produto pelo cliente. Além de ajudar a definir uma direção para o desenvolvimento 
-            do produto, incluindo melhorias e ajustes para que seu lançamento seja um sucesso.
+        <img src="imagens/mvp.jpg" alt="MVP" style="float: left; width: 400px; height: 400px; margin-right: 20px;">
+        <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o cliente. Ou seja,
+            o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo. Como essa
+            ferramenta é rapidamente lançada no mercado, os desenvolvedores possuem a vantagem de obter um feedback do produto e validar
+            o investimento.
+        </p>
+        <h2>Como fazer o MVP?</h2>
+        <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele deve ter funcionalidades
+            suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente precisa.
         </p>
     </section>
+
     <footer>
         <div class="anterior">
             <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
