--- a/Páginas API/home.html
+++ b/Páginas API/home.html
@@ -65,5 +65,12 @@
             com os clientes para entender seus requisitos</h4>
         <ul><li><a href="avaliações.html">Aprender</a></li></ul>
     </section>
-    <footer></footer>
+
+    <footer>
+            <h3>O conteúdo do site foi feito com base nas seguintes referências:</h3><br>
+            <a href="https://aws.amazon.com/pt/what-is/scrum/">Amazon AWS: O que é scrum?</a><br>
+            <a href="https://scrumguides.org/index.html">Scrumguides: O que é scrum?</a><br>
+            <a href="https://rockcontent.com/br/blog/scrum/">Rockcontent: Aplicação do scrum</a>
+    </footer>
+
 </body>
