--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -23,6 +23,9 @@
             <p>Portanto o Scrum master deve observar, identificar, criar visibilidade e ajudar a resolver problemas, para remover impedimentos , com isso evitando que a equipe scrum sofra interrupções desnecessárias , e também evitando que a equipe sofra desvio da metodologia.
                 Deve -se também sempre incentivar que a equipe promova sua própria autonomia , para se encontrar soluções por conta própria .
             </p>
+            <h3 id="resumo">FACILITADOR DO PROCESSO</h3>
+            <h3 id="resumo">PONTO DE CONTATO ENTRE EQUIPES</h3>
+            <h3 id="resumo">PROMOTOR DE MELHORIA CONTÍNUA</h3>
         </section>
     </main>
     <footer>
