--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -29,6 +29,10 @@
             <li>Manter a Visão do Produto, estabelecendo-a junto aos clientes, e comunicando-a a todos os envolvidos, garantindo que o trabalho sempre siga nessa direção.</li>
             <li>Planejar as Entregas, e verificar, na Sprint Review, se a Meta estabelecida para o Sprint foi atingida.</li>
         </ol>
+
+        <h3 id="resumo">GESTOR DO BACKLOG DO PRODUTO</h3>
+        <h3 id="resumo">DEFINE A VISÃO DO PRODUTO</h3>
+        <h3 id="resumo">TOMA AS DECISÕES</h3>
     </section>
 </main>
 <footer>
