--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -15,10 +15,10 @@
     </header>
 
     <section>
-        <h2>O QUE É A METODOLOGIA ÁGIL?</h2>
-        <p>A metodologia ágil, também conhecida como metodo scrum, é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software, 
+        <h2>O QUE É O MÉTODO SCRUM?</h2>
+        <p>O método scrum é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software, 
             mas também em outras áreas onde a adaptabilidade é necessária. Ele abrange um conjunto de ferramentas,
-            reuiões e funções que garantem um desenvolvimento eficiente para o projeto. Além disso, o scrum
+            reuiões e funções que garantem um desenvolvimento eficiente para o projeto. O scrum
             também usa ciclos curtos de desenvolvimento chamados sprints, permitindo-os melhorar o produto com base 
             em um feedback contínuo.<br><br>
             Alguns princípios do scrum fundamentais para que o projeto possa ter sucesso são:
@@ -76,6 +76,9 @@
 
         <ol>
             <li>Sprint Planning: Envolve o planejamento de tudo aquilo que será desenvolvido durante a sprint. </li>
+            <li>Sprint: É o período destinado para concluir um incremento (Tarefas do backlog realizadas durante
+                aquela sprint).
+            </li>
             <li>Daily Scrum: Reuniões diárias para discutir o andamento do processo. </li>
             <li>Sprint Review: É uma reunião feita com o objetivo de refletir os pontos de melhoria da equipe e
                 avaliar o desempenho do time. </li>
