--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -15,17 +15,18 @@
     <main>
         <section>
             <h2>O QUE É?</h2>
-            <p>O scrum master tem como função ser um facilitador para o time Scrum, facilitando a comunicação entre o Product owner (PO) e time de desenvolvimento. O scrum master deve exercer essa função de forma neutra e com boa comunicação, pois deve saber negociar as tarefas da equipe de desenvolvimento junto ao PO e também junto as outras equipes de scrum ou organização em que se está inserido.</p>
+            <img src="imagens/master.jpg" id="img">
+            <p></p>
         </section>
         <section>
-            <h2>FUNÇÕES</h2>
-            <p>O Scrum master tem como função remover ou gerenciar  impedimentos no projeto , então o scrum master tem como função junto ao time de desenvolvedores ajudar a resolver e ou prevenir os impedimentos que apareçam, promover mudanças organizacionais necessárias para melhoria da efetividade da equipe, assegura que as regras comportamentais estão sendo seguidas pela equipe , regras essas que devem ser apresentadas a equipe antecipadamente para que não haja duvidas de nenhum membro, assegura que o scrum seja compreendido e adequadamente utilizado pelo time de scrum  e  realizar treinamentos quando necessário.</p>
-            <p>Portanto o Scrum master deve observar, identificar, criar visibilidade e ajudar a resolver problemas, para remover impedimentos , com isso evitando que a equipe scrum sofra interrupções desnecessárias , e também evitando que a equipe sofra desvio da metodologia.
-                Deve -se também sempre incentivar que a equipe promova sua própria autonomia , para se encontrar soluções por conta própria .
+            <h2 id="margin">FUNÇÕES</h2>
+            <p>
             </p>
-            <h3 id="resumo">FACILITADOR DO PROCESSO</h3>
-            <h3 id="resumo">PONTO DE CONTATO ENTRE EQUIPES</h3>
-            <h3 id="resumo">PROMOTOR DE MELHORIA CONTÍNUA</h3>
+            <div class="resumo">
+              <h3 id="resumo">FACILITADOR DO PROCESSO</h3>
+              <h3 id="resumo">PONTO DE CONTATO ENTRE EQUIPES</h3>
+              <h3 id="resumo">PROMOTOR DE MELHORIA CONTÍNUA</h3>
+           </div>
         </section>
     </main>
     <footer>
