--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -15,7 +15,8 @@
     </header>
 
     <section>
-        <h2>O QUE É O MÉTODO SCRUM?</h2>
+        <h2 id="margin" >O QUE É O MÉTODO SCRUM?</h2>
+        <img src="./imagens/imgscrum.png" id="imgscrum" alt="timescrum">
         <p>O método scrum é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software, 
             mas também em outras áreas onde a adaptabilidade é necessária. Ele abrange um conjunto de ferramentas,
             reuiões e funções que garantem um desenvolvimento eficiente para o projeto. O scrum
@@ -56,18 +57,15 @@
     </section>
 
     <section>
-        <h2>QUAIS OS BENEFÍCIOS DE USAR O SCRUM?</h2>
+        <h2 id="margin" >QUAIS OS BENEFÍCIOS DE USAR O SCRUM?</h2>
+        <img src="./imagens/teamscrum.png" id="timescrum" alt="timescrum">
         <p>O scrum se destaca em relação a outras metodologias pela praticidade e eficiência, uma vez que permite que as 
             equipes executem mudanças no projeto com mais rapidez. Os processos que envolvem a verificação do produto 
-            permitem obter um retorno com base na visão do cliente, garantindo a qualidade mesmo em meio a imprevistos. 
-            Além disso, como as equipes são autogerenciáveis, os membros tem uma maior flexibilidade para realizar mudanças
-            no produto conforme seu próprio estilo de trabalho.
-
-        </p>
+            permitem obter um retorno com base na visão do cliente, garantindo a qualidade mesmo em meio a imprevistos. Além disso, como as equipes são autogerenciáveis, os membros tem uma maior flexibilidade para realizar mudanças
+            no produto conforme seu próprio estilo de trabalho.</p>
     </section>
-
     <section>
-        <h2>PROCESSOS</h2>
+        <h2 id="margin">PROCESSOS</h2>
         <p>Como mencionado anteriormente, o scrum possui ciclos curtos de desenvolvimento denominados
             sprints, que podem durar aproximadamente entre 1 a 4 semanas, onde a equipe de desenvolvimento
             cria versões do produto que são continuamente modificadas e complementadas até a sua
