--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -15,7 +15,7 @@
     </header>
 
     <section>
-        <h2>O QUE SÃO?</h2>
+        <h2 id="margin">O QUE SÃO?</h2>
         <p>Os artefatos são ferramentas de gerenciamento utilizadas no scrum que além de auxiliarem no
             planejamento também fornecem informações importantes para a equipe e os demais interessados no projeto.
             A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.
@@ -23,15 +23,15 @@
     </section>
 
     <section>
-            <h2>BACKLOG DO PRODUTO</h2>
-            <img src="imagens/backlog.jpg" alt="Backlog" style="float:left;width: 400px;height: 400px; margin-right: 20px;">
+            <h2 id="margin">BACKLOG DO PRODUTO</h2>
+            <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
         <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que 
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
             de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista, satisfazendo
             as necessidades do cliente.
         </p>
         <h2>Como montar o Backlog?</h2>
-        <p> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os requisitos. Após entender a
+        <p style="margin-top: -3%;"> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os requisitos. Após entender a
             visão do produto, as Epics, funcionalidades de maior nível, devem ser identificadas e priorizadas em relação
             as demais tarefas. Depois, essas Epics devem ser divididas em User Story (você entenderá melhor esse conceito
             mais abaixo) e as tarefas devem ser divididas por de prioridade. Por fim, é essencial fazer uma estimativa
@@ -40,14 +40,13 @@
     </section>
 
     <section>
-            <h2>BURNDOWN</h2>
-            <img src="imagens/burndown.png" alt="burndown" style="float: left;width: auto;height: auto; margin-right: 20px;">
-        <p>O Burndown é um gráfico que representa a relação entre a estimativa para o 
+            <h2 id="margin">BURNDOWN</h2>
+          <p>O Burndown é um gráfico que representa a relação entre a estimativa para o 
             período de conclusão das atividades e o período real de conclusão. Esse artefato permite que o
             grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em relação
-            ao tempo de finalização.
-
-            <h2>Como criar um Burndown?</h2>
+            ao tempo de finalização.</p>
+            <img src="imagens/burndown.png" id="burndown" alt="burndown">
+            <h2 id="margin">Como criar um Burndown?</h2>
             <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para 
             concluir cada tarefa da sprint, determinando um limite de tempo. É natural que a diferença entre a linha
             que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao longo
@@ -58,17 +57,18 @@
     </section>
 
     <section>
-            <h2>USER STORY</h2>
-            <img src="imagens/p.jpg" alt="User Story" style="float: left;width: 400px;height: 400px; margin-right: 20px;">
+            <h2 id="margin">USER STORY</h2>
             <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio ponto de
                vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para [benefício].
             </p>
+            <div class="userstory">
+              <h3>QUEM?</h3>
+              <h3 id="h3branco">POR QUE?</h3>
+              <h3>O QUE?</h3>
+            </div>
 
-            <h3>QUEM?</h3>
-            <h3 id="h3branco">POR QUE?</h3>
-            <h3>O QUE?</h3>
-
-            <h2>Como fazer uma User Story?</h2>
+            <h2 id="margin">Como fazer uma User Story?</h2>
+            <img src="imagens/p.jpg" id="imguserstory" alt="User Story">
             <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
                 Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é necessário
                 para que a tarefa seja concluída.
@@ -76,26 +76,22 @@
     </section>
 
     <section>
-        <h2>DOR E DOD</h2>
-        <img src="imagens/dor.jpg" alt="DOR" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
-        <h2>Como montar o </h2>
-        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa ter para que possa ser executada
+        <h2 id="margin" style="margin-top: 15%;">DOR E DOD</h2>
+        <img src="imagens/dor.png" id="imgdor" alt="DOR">
+        <img src="imagens/dod2.jpg" id="imgdod"  alt="DOD">
+        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa ser executada
             pelo time. Enquanto DOD, Definition of Done, é a definição daquilo que foi feito. Ambas as ferramentas são importantes para
             trazer tranparência ao processo de desenvolvimento, sendo critérios de entrada e saída, o DOR verificando se o item está pronto
-            para ser levado para teste e o DOD se um item está pronto para ser movido para a próxima etapa.
-        </p>
-        <img src="imagens/dod.jpg" alt="DOD" style="float: left; width: 400px; height: 300px; margin-right: 20px;">
+            para ser levado para teste e o DOD se um item está pronto para ser movido para a próxima etapa.</p>
     </section>
 
     <section>
-        <h2>MVP</h2>
-        <img src="imagens/mvp.jpg" alt="MVP" style="float: left; width: 400px; height: 400px; margin-right: 20px;">
+        <h2 id="margin">MVP</h2>
         <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o cliente. Ou seja,
             o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo. Como essa
             ferramenta é rapidamente lançada no mercado, os desenvolvedores possuem a vantagem de obter um feedback do produto e validar
-            o investimento.
-        </p>
-        <h2>Como fazer o MVP?</h2>
+            o investimento.</p>
+        <h2 id="margin">Como fazer o MVP?</h2>
         <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele deve ter funcionalidades
             suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente precisa.
         </p>
