--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -15,31 +15,25 @@
     <section>
 
         <h2>O QUE É A METODOLOGIA ÁGIL?</h2>
-        <div class="alinhar">
-            <img src="imagens/imgintro.png">
+           <img src="imagens/introimg.png" id="introimg">
            <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
             mais flexível e adaptado. Como o próprio nome sugere, seu principal objetivo é
-            aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto.</p>
-        </div> 
-           <p>Assim, a elaboração do projeto é feita em ciclos curtos chamados de iterações, que possibilitam um feeback
-            contínuo e uma melhoria na qualidade e conformidade das entregas.<br>Nas próximas páginas você entenderá mais detalhadamente sobre cada um desses conceitos</p>
+            aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto.  Assim, a elaboração do projeto é feita em ciclos curtos chamados de iterações, que possibilitam um feedback
+            contínuo e uma melhoria na qualidade e conformidade das entregas.
+            <p>Nas próximas páginas você entenderá mais detalhadamente 
+            sobre cada um desses conceitos.</p>
     </section>
 
     <section>
 
-        <h2>O QUE VOCÊ ENCONTRARÁ NESSE SITE?</h2>
-
-        <div class="alinhar2">
+        <h2 id="margin">O QUE VOCÊ ENCONTRARÁ NESSE SITE?</h2>
         <p>Bem-vindo ao nosso site! O spaceline foi desenvolvido com o objetivo de ensinar a metodologia
            ágil de forma didática, proporcionando a todos os interessados um<br>
            conhecimento abrangente sobre o método scrum e sua aplicação prática no ambiente de trabalho.<br> 
            Além de uma sólida base teorica, cada página oferece tabelas interativas que permitem<br>
            simular processos, montar ferramentas e identificar suas soft skills.
-           O conteúdo é dividido em 5 partes:
-        </p>
+           O conteúdo é dividido em 5 partes:</p>
 
-        <img src="imagens/livroaberto.png">
-        </div>
 
         <div class="introduçao">
         <ol>
@@ -49,13 +43,10 @@
             <li>Product Owner: O representante da equipe.</li>
             <li>Soft skills: Habilidades necessárias para um profissional de T.I. no mercado de trabalho.</li>
         </ol>
-
-        
-          <p> Ao final de cada aula, disponibilizamos um teste de compreensão, no qual você poderá avaliar o seu nível
+        <p> Ao final de cada aula, disponibilizamos um teste de compreensão, no qual você poderá avaliar o seu nível
             de entendimento sobre a metodologia ágil e quais os pontos de<br>
-            melhoria. 
-           </p>
-        </div>
+            melhoria. </p>
+            <img src="imagens/livroabertointro.png" id="livrointro">
 
     </section>
 
