--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -16,18 +16,50 @@
         <section>
             <h2>O QUE É?</h2>
             <img src="imagens/master.jpg" id="img">
-            <p></p>
+            <p>O Scrum Master é o papel de líder responsável por facilitar e garantir o cumprimento dos processos Scrum. 
+                No entanto, é importante destacar que o Scrum Master não é um chefe, pois, no Scrum, as equipes são 
+                autogerenciáveis. Sua função é guiar a equipe na adoção dos processos e valores do Scrum, apoiando-a 
+                para que trabalhe de maneira produtiva e sustentável.</p>
         </section>
         <section>
             <h2 id="margin">FUNÇÕES</h2>
-            <p>
-            </p>
+                <ol>
+                    <li>Ser um facilitador para o time Scrum: O Master deve facilitar a comunicação entre o Product Owner 
+                        e o time de desenvolvimento. Essa função deve ser exercida de forma neutra e com boa comunicação, para 
+                        que as tarefas da equipe sejam negociadas.</li>
+                    <li>Remover impedimentos: Ajudar a resolver e prevenir os impedimentos que apareçam, promover mudanças 
+                        organizacionais necessárias para melhoria da efetividade da equipe, assegurar que as regras 
+                        comportamentais estão sendo seguidas e garantir que o scrum seja compreendido e adequadamente 
+                        utilizado pelo time de scrum. Quando necessário, ele pode realizar treinamentos para auxiliar 
+                        nesse processo.</li>
+                    <li>Incentivar a equipe a promover sua própria autonomia: Auxiliar a equipe a desenvolver habilidades como
+                        autonomia, resiliência e eficiência faz parte da mentalidade ágil, pois dessa forma as equipes podem se
+                        adaptar e melhorar continuamente sem depender de uma autoridade externa.
+                    </li>
+                </ol>
+        </section>
+        <section>
+            <h2>HABILIDADES</h2>
+            <p>Algumas habilidades essenciais para que você desempenhe um bom papel como Scrum Master são:</p>
+            <ol>
+                <li>Boa comunicação: O sucesso da metodologia Scrum depende de um fluxo claro de informações, e como o Master
+                    é o ponto de troca de informações entre equipes é fundamental que ele tenha uma comunicação clara e efetiva.
+                </li>
+                <li>Assertividade: O Scrum Master é responsável por facilitar os processos e auxiliar a equipe a resolver 
+                    problemas e conflitos, além de garantir que todos os envolvidos no projeto tenham alinhamento de expectativas. 
+                    Para desempenhar essa função com eficácia, a assertividade é fundamental.</li>
+                <li>Resolução de conflitos: Saber remover os impedimentos que possam atrapalhar a equipe é imprescindível para
+                    que o time de desenvolvimento possa executar seu papel.
+                </li>
+            </ol>
+        </section>
+
             <div class="resumo">
               <h3 id="resumo">FACILITADOR DO PROCESSO</h3>
               <h3 id="resumo">PONTO DE CONTATO ENTRE EQUIPES</h3>
               <h3 id="resumo">PROMOTOR DE MELHORIA CONTÍNUA</h3>
            </div>
-        </section>
+        
     </main>
     <footer>
             <div class="anterior">
